--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=demo
+spring.datasource.url=jdbc:mysql://localhost:3306/tasks
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+spring.jpa.hibernate.ddl-auto=update
+server.port=8085
+spring.security.user.name=admin
+spring.security.user.password=admin123
+jwt.secret=AQ
+logging.level.org.springframework.security=DEBUG
